# Lattice

./: .editorconfig  .gitattributes  .gitignore  BENCHMARK_BASELINE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PERFORMANCE_TUNING.md  README.md  SECURITY.md  build.gradle  gradle.properties  settings.gradle
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
benchmarks/baseline/: README.md  end-to-end-scoped-2026-05-02.json  env.txt  latency-isolated-disruptor-manual-fused-2026-05-02.json  latency-isolated-disruptor-physical-2026-05-02.json  latency-isolated-lattice-physical-pinned-cpu-2026-05-02.json  latency-isolated-lattice-physical-strict-topology-2026-05-02.json  latency-isolated-lattice-source-inline-elided-2026-05-02.json  lattice-core-basics.json  lattice-edge-pair-mpsc-ingress.json  lattice-placement.json  optimal-path-completed-2026-05-02.json  optimal-path-completed.json  optimal-path-gc-2026-05-02.json  optimal-path-latency-2026-05-02.json  (+5 more)
docs/: README.md  _config.yml  api.md  architecture.md  backpressure.md  compatibility-matrix.md  devices.md  disruptor-comparison.md  edge-semantics.md  failure-modes.md  getting-started.md  graph-dsl.md  index.md  latency.md  linux-validation.md  observability.md  operations-runbook.md  ordering-guarantees.md  release.md  source-specialization-and-fusion.md
native/static-topology-native/: Cargo.toml  README.md
native/static-topology-native/src/: lib.rs
(+700 files in other folders)
