[package]
name = "static_topology_native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[dependencies]
jni_macro = "1.0.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
